--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,17 @@
 *.bak
 *.key
 *.pid
+*.rev
 *~
 .atom/packages*
 .aws/aws.properties
 .aws/credentials*
 .gnupg/.#*
-.gnupg/randomseed
-.gnupg/reader0.status
+.gnupg/.gpg-v21-migrated
+.gnupg/crls.d/DIR.txt
+.gnupg/random_seed
+.gnupg/reader_0.status
 .gnupg/secring.gpg
-.gnupg/tofudb
+.gnupg/tofu.db
 .gnupg/trustdb.gpg
 .wireshark/recent*
